# Cloud

./: .dockerignore  DEPLOYMENT.md  Dockerfile  Dockerfile.render  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-gcp.yml  deploy.yml
client/src/: index.css
client/src/components/: Layout.tsx
client/src/pages/: Architecture.tsx
data/raw/: noshow.csv
docs/: GCP_DEPLOYMENT_GUIDE.md  cloud_deployment.md
mlruns/0/: meta.yaml
mlruns/326076643048826623/: meta.yaml
mlruns/326076643048826623/86433fa18db542bba1be6a5c8c1ca5ea/: meta.yaml
mlruns/326076643048826623/86433fa18db542bba1be6a5c8c1ca5ea/metrics/: auc
mlruns/326076643048826623/86433fa18db542bba1be6a5c8c1ca5ea/outputs/m-c6bfef3da87247a4ba33212ef122319e/: meta.yaml
mlruns/326076643048826623/86433fa18db542bba1be6a5c8c1ca5ea/params/: scale_pos_weight
mlruns/326076643048826623/86433fa18db542bba1be6a5c8c1ca5ea/tags/: mlflow.runName  mlflow.source.name
mlruns/326076643048826623/models/m-c6bfef3da87247a4ba33212ef122319e/: meta.yaml
mlruns/326076643048826623/models/m-c6bfef3da87247a4ba33212ef122319e/artifacts/: MLmodel  conda.yaml  model.ubj  python_env.yaml  requirements.txt
mlruns/326076643048826623/models/m-c6bfef3da87247a4ba33212ef122319e/metrics/: f1
mlruns/models/noshow-prediction-model/: meta.yaml
mlruns/models/noshow-prediction-model/version-1/: meta.yaml
models/: xgboost_model.json
scripts/: setup-gcp.ps1
server/: db.ts  storage.ts
src/: predict.py  train.py
(+2 files in other folders)
